--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -236,9 +236,9 @@
     "i_am_over": "Yes, I am over {{minimumAge}}",
     "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
     "location_alert_header": "Enable Location access from \"{{applicationName}}\"",
-    "location_body": "To use Bluetooth scanning, the device location setting needs to be turned on. The app does not use your location data and your individual device cannot be tracked.",
+    "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. However, {{applicationName}} does NOT track or keep a record of your location.",
     "location_header": "Activate Location",
-    "location_subheader": "Why do I need to turn on my phone's location setting?",
+    "location_subheader": "{{applicationName}} never accesses your location data and your device is never tracked.",
     "no_take_me": "No, take me back",
     "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
