--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,8 +32,8 @@
     "no": "No",
     "no_thanks": "No thanks",
     "off": "OFF",
-    "on": "ON",
     "okay": "Okay",
+    "on": "ON",
     "save": "Save",
     "select_language": "Select language",
     "settings": "Open Settings",
@@ -78,15 +78,15 @@
     },
     "person_and_health_expert": "A person talking to a health expert",
     "start": {
-      "header": "Report a positive test",
       "body": "If you have tested positive for COVID-19 (not through an antibody test), you can anonymously report the test.\n\nReporting your test will help others in your community contain the spread of the virus.",
+      "header": "Report a positive test",
       "what_is_a_verification_code": "What is a verification code?"
     },
     "user_details_form": {
+      "phone_number": "Phone number",
       "subheader": "Please provide your phone number and test date and we'll text you your verification code.",
-      "test_details": "Test Details",
       "test_date": "Test date",
-      "phone_number": "Phone number"
+      "test_details": "Test Details"
     }
   },
   "export": {
@@ -105,8 +105,8 @@
     "consent_warning_message": "Continuing will void your verification code. If you would like to share your positive diagnosis in the future, you will first need to get a new verification code.",
     "consent_warning_title": "Warning!",
     "enable_exposure_notifications_body": "You must enable exposure notifications to report a positive test result.",
-    "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enable_exposure_notifications_button": "Enable Exposure Notifications",
+    "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
       "invalid_code": "Try a different code",
@@ -194,6 +194,21 @@
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
     "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close proximity with later receives a positive test for COVID-19 and chooses to notify others."
   },
+  "exposure_notification_alerts": {
+    "bluetooth_body": "To activate Exposure Notifications, you must first turn on Bluetooth in your Settings app.",
+    "bluetooth_title": "Enable Bluetooth",
+    "cant_check_for_exposures_body": "You must enable Exposure Notifications to check for exposures.",
+    "cant_check_for_exposures_button": "Enable Exposure Notifications",
+    "cant_check_for_exposures_title": "Can't Check for Exposures",
+    "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
+    "set_active_region_ios_title": "Set Active Region",
+    "share_exposure_information_ios_body": "Open the Settings app, then navigate to the Exposure Notifications settings for this app. Ensure 'Share Exposure Information' is turned on, then press 'Set As Active Region'.",
+    "share_exposure_information_ios_title": "Share Exposure Information",
+    "unhandled_error_body": "Something unexpected happened. Please close and reopen the app and try again.",
+    "unhandled_error_title": "Something Went Wrong",
+    "use_exposure_notifications_android_body": "To enable Exposure Notifications, go to the COVID-19 Exposure Notifications screen of your Settings app and enable 'Use Exposure Notifications'.",
+    "use_exposure_notifications_android_title": "Enable Exposure Notifications"
+  },
   "exposure_scanning_status": {
     "fix_this": "Fix this",
     "learn_more": "Learn more",
@@ -236,9 +251,9 @@
     "take_assessment": "Take Assessment",
     "to_submit_your_test": "To submit your positive test result, you'll need to get your verification code from a contact tracer.",
     "verification_code_card": {
-      "more_info": "What is a verification code?",
       "if_you_have_a_code": "Submit your verification code to help keep your community safe.",
       "if_you_have_a_positive_test": "If you have tested positive for COVID-19, you can anonymously report the test to help keep your community safe.",
+      "more_info": "What is a verification code?",
       "report_positive_test": "Report Positive Test",
       "submit_code": "Submit code"
     }
@@ -504,31 +519,16 @@
     "sore_throat": "Sore throat",
     "trouble_breathing": "Trouble breathing"
   },
-  "exposure_notification_alerts": {
-    "use_exposure_notifications_android_title": "Enable Exposure Notifications",
-    "use_exposure_notifications_android_body": "To enable Exposure Notifications, go to the COVID-19 Exposure Notifications screen of your Settings app and enable 'Use Exposure Notifications'.",
-    "share_exposure_information_ios_title": "Share Exposure Information",
-    "share_exposure_information_ios_body": "Open the Settings app, then navigate to the Exposure Notifications settings for this app. Ensure 'Share Exposure Information' is turned on, then press 'Set As Active Region'.",
-    "set_active_region_ios_title": "Set Active Region",
-    "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
-    "bluetooth_title": "Enable Bluetooth",
-    "bluetooth_body": "To activate Exposure Notifications, you must first turn on Bluetooth in your Settings app.",
-    "unhandled_error_body": "Something unexpected happened. Please close and reopen the app and try again.",
-    "unhandled_error_title": "Something Went Wrong",
-    "cant_check_for_exposures_title": "Can't Check for Exposures",
-    "cant_check_for_exposures_body": "You must enable Exposure Notifications to check for exposures.",
-    "cant_check_for_exposures_button": "Enable Exposure Notifications"
-  },
   "verification_code_alerts": {
-    "invalid_code_title": "Invalid Code",
-    "invalid_code_body": "The verification code you submitted is invalid.\n\nThe code must be a valid verification code provided to you by your health authority.\n\nIt is also possible that your code has expired. If so, you will need to request a new code from your health authority.",
-    "code_used_title": "Verification Code Already Used",
     "code_used_body": "The verification code provided has already been used.",
-    "network_connection_title": "No Internet Connection",
+    "code_used_title": "Verification Code Already Used",
+    "invalid_code_body": "The verification code you submitted is invalid.\n\nThe code must be a valid verification code provided to you by your health authority.\n\nIt is also possible that your code has expired. If so, you will need to request a new code from your health authority.",
+    "invalid_code_title": "Invalid Code",
     "network_connection_body": "You need to be connected to WiFi to submit a verification code.",
-    "timeout_title": "Submission Took Too Long",
+    "network_connection_title": "No Internet Connection",
     "timeout_body": "It took too long to submit the verification code. Please try again later.",
-    "unknown_title": "Something Went Wrong",
-    "unknown_body": "An unexpected error occurred. Please try again."
+    "timeout_title": "Submission Took Too Long",
+    "unknown_body": "An unexpected error occurred. Please try again.",
+    "unknown_title": "Something Went Wrong"
   }
 }
