--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,18 +18,15 @@
   "common": {
     "back": "Back",
     "cancel": "Cancel",
-    "close": "Close",
     "close_screen": "Close screen",
     "confirm": "Confirm",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
-    "enable": "Enable",
     "learn_more": "Learn more",
     "maybe_later": "Maybe later",
     "more": "More",
     "next": "Next",
-    "no": "No",
     "no_thanks": "No thanks",
     "off": "OFF",
     "okay": "Okay",
@@ -41,17 +38,11 @@
     "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
-    "success": "Success",
-    "yes": "Yes"
+    "success": "Success"
   },
   "covid_data": {
     "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
-    "cases_today": "Cases today",
-    "covid_coverage": "Covid Coverage",
-    "covid_data": "COVID Data",
     "daily_new_cases": "Daily new cases",
-    "deaths_today": "Deaths today",
-    "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
     "infection_rate": "Infection rate",
     "new_cases": "New Cases",
@@ -61,11 +52,8 @@
     "see_more": "See more",
     "source": "source: {{source}}",
     "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
-    "total_cases": "Total cases",
-    "total_deaths": "Total deaths",
     "trending_down": "Trending down",
-    "trending_up": "Trending up",
-    "up_from_last_week": "Up from last week"
+    "trending_up": "Trending up"
   },
   "errors": {
     "description": "An error has occurred. Please reload the app.",
@@ -91,17 +79,11 @@
   },
   "export": {
     "code": "Code",
-    "code_input_body_bluetooth": "Enter your verification code",
-    "code_input_button_cancel": "Cancel",
-    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
-    "consent_body_1": "If you choose to do so, you’re helping others in your community make informed decisions about their health and playing your part to contain the spread of the virus.",
     "consent_body_2": "The only information shared will be the random set of numbers your phone exchanged over Bluetooth with other phones that were nearby during the past 14 days, along with a weighted risk score based on when your symptoms developed.",
     "consent_button_title": "I Understand and Consent",
-    "consent_subheader_1": "Why should I share?",
-    "consent_subheader_2": "How does it work?",
     "consent_warning_message": "Continuing will void your verification code. If you would like to share your positive diagnosis in the future, you will first need to get a new verification code.",
     "consent_warning_title": "Warning!",
     "enable_exposure_notifications_body": "You must enable exposure notifications to report a positive test result.",
@@ -109,12 +91,9 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
-      "invalid_code": "Try a different code",
       "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
-      "timeout_error": "Request took too long",
-      "unknown_code_verification_error": "Try a different code",
-      "verification_code_used": "Verification code has already been used"
+      "unknown_code_verification_error": "Try a different code"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
@@ -139,8 +118,6 @@
         "no_token_for_existing_keys_title": "Attempt to submit existing keys"
       }
     },
-    "start_header_bluetooth": "Help contain the spread of the virus and protect others in your community",
-    "submit_code": "Submit Code",
     "verification_code_info": {
       "how_do_i_get_body": "Contact your health authority, {{healthAuthorityName}}.",
       "how_do_i_get_header": "How do I get a verification code?",
@@ -165,11 +142,6 @@
       "speak_with_contact_tracer": "Speak with a contact tracer",
       "wash_your_hands": "Wash your hands",
       "wear_a_mask": "Wear a mask"
-    },
-    "exposure_window": {
-      "four_to_six_days_ago": "4 to 6 days ago",
-      "seven_to_fourteen_days_ago": "7 to 14 days ago",
-      "today_to_three_days_ago": "Within the last 3 days"
     },
     "health_guidelines": {
       "six_feet_apart": "Stay 6 feet apart",
@@ -218,10 +190,6 @@
   "home": {
     "bluetooth_info_body": "Your phone detects other phones you spend time in close proximity with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
-      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
-      "bluetooth_disabled_error_message": "Turn on Bluetooth in your device settings.",
-      "bluetooth_disabled_error_title": "Enable Bluetooth",
-      "bluetooth_header": "Bluetooth",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
       "location_disabled_error_title": "Authorize in Settings",
       "location_header": "Location",
@@ -230,12 +198,10 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Exposure Detection Off",
-      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
     "check_if_your_symptoms": "Enter your symptoms and get an instant recommendation on how to stay safe.",
-    "did_you_test_positive": "Did you test positive for COVID-19?",
     "enter_symptoms": "Enter symptoms",
     "fix": "Fix issues with {{technology}}",
     "get_more_info": "Get more info on {{technology}}",
@@ -247,9 +213,7 @@
     "proximity_tracing_info_body_2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
     "proximity_tracing_info_subheader_1": "How does Exposure Notifications work?",
     "proximity_tracing_info_subheader_2": "Is my data secure?",
-    "request_call": "Request Call",
     "take_assessment": "Take Assessment",
-    "to_submit_your_test": "To submit your positive test result, you'll need to get your verification code from a contact tracer.",
     "verification_code_card": {
       "if_you_have_a_code": "Submit your verification code to help keep your community safe.",
       "if_you_have_a_positive_test": "If you have tested positive for COVID-19, you can anonymously report the test to help keep your community safe.",
@@ -266,29 +230,20 @@
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
     "privacy_policy": "Privacy Policy",
-    "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
-    "exposure": "Exposure",
     "exposure_history": "Exposures",
     "home": "Dashboard",
-    "more_info": "More Info",
     "settings": "Settings",
     "symptom_history": "Symptoms"
   },
   "onboarding": {
-    "activation_header_title": "App Setup",
     "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
     "app_setup_complete_header": "App Setup Complete!",
     "app_setup_incomplete_body": "{{applicationName}} requires Exposure Notifications and Bluetooth permissions to know when you have been exposed to COVID-19. You can authorize this in Settings.",
     "app_setup_incomplete_header": "App Setup Incomplete",
     "app_setup_incomplete_location_body": "{{applicationName}} requires Exposure Notifications, Bluetooth, and Location permissions to know when you have been exposed to COVID-19. You can authorize this in Settings.",
-    "bluetooth_alert_body": "To use Bluetooth scanning, the device Bluetooth setting needs to be turned on.",
-    "bluetooth_alert_header": "Activate Bluetooth",
-    "bluetooth_body": "To use Bluetooth scanning, the device Bluetooth setting must be turned on.",
-    "bluetooth_header": "Activate Bluetooth",
-    "bluetooth_subheader": "Why do I need to turn on my phone's Bluetooth setting?",
     "eula": "End User Legal Agreement",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
     "i_am_over": "Yes, I am over {{minimumAge}}",
@@ -347,15 +302,12 @@
   },
   "product_analytics": {
     "i_understand_and_consent": "I Understand and Consent",
-    "not_sharing_anonymized_data": "Not sharing anonymized data",
     "privacy_policy": "Privacy Policy",
     "share_anonymized_data": "Share Anonymized Data",
     "share_anonymized_data_disclaimer": "By proceeding, you agree to share anonymized answers to screening questions with the {{healthAuthorityName}}",
     "share_data_para_1": "Anonymous and aggregated data about how communities are using this app helps the {{healthAuthorityName}} Commission, analyze, understand, and contain the spread of COVID-19.",
     "share_data_para_2": "This data contains no personally-identifying information.",
-    "sharing_anonymized_data": "Sharing anonymized data",
-    "stop_sharing_data": "Stop Sharing Data",
-    "you_are_sharing_data": "You are sharing anonymized data"
+    "stop_sharing_data": "Stop Sharing Data"
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
@@ -526,8 +478,6 @@
     "invalid_code_title": "Invalid Code",
     "network_connection_body": "You need to be connected to WiFi to submit a verification code.",
     "network_connection_title": "No Internet Connection",
-    "timeout_body": "It took too long to submit the verification code. Please try again later.",
-    "timeout_title": "Submission Took Too Long",
     "unknown_body": "An unexpected error occurred. Please try again.",
     "unknown_title": "Something Went Wrong"
   }
