--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,14 +128,20 @@
     }
   },
   "exposure_history": {
+    "exposure_summary": "Someone you were near between {{startDate}} and {{endDate}} tested positive for COVID-19.",
     "check_for_exposures": "Check for exposures",
+    "days_remaining": "There are {{daysOfQuarantineLeft}} days left in your recommended quarantine period.",
+    "summary": "Summary",
+    "possible_exposures": "Possible Exposures",
+    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result.",
+    "next_steps": "Next Steps",
     "exposure_detail": {
       "2m_apart": "2m apart",
       "6ft_apart": "6ft apart",
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
+      "next_steps": "Review health guidelines",
       "header": "Someone you were near has since tested positive for COVID-19.",
-      "next_steps": "Next steps",
       "personalize_my_guidance": "Personalize my guidance",
       "quarantine": "Quarantine",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
